# sdk

aspnet/: .gitignore  README.md  ShowAd.AspNetCore.sln
go/: .gitignore  README.md  access_policy.go  access_policy_test.go  api.go  cookies.go  errors.go  go.mod  jwt.go  jwt_test.go  middleware.go  middleware_test.go  path_match.go  showad.go  url.go  url_test.go
laravel/: .env.example  .gitignore  README.md  composer.json  phpunit.xml.dist
nextjs/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  tsup.config.ts
node/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json  tsup.config.ts
node/src/: index.ts  (+1 more)
nuxt/: .gitignore  README.md  nuxt.config.ts  package-lock.json  package.json  tsconfig.json
php/: .gitignore  README.md  composer.json  phpunit.xml.dist
python/: .gitignore  README.md  pyproject.toml
python/examples/: django_settings.py  fastapi_app.py  flask_app.py
python/src/proofmark_showad/: __init__.py  access_policy.py  api.py  async_api.py  config.py  cookies.py  exceptions.py  http_client.py  jwt_helper.py  path_match.py  url.py
python/src/proofmark_showad/core/: __init__.py  protect.py
python/src/proofmark_showad/django/: __init__.py  apps.py  middleware.py
python/src/proofmark_showad/fastapi/: __init__.py  middleware.py
python/src/proofmark_showad/flask/: __init__.py
python/tests/: _helpers.py  conftest.py  django_settings.py  django_urls.py  test_access_policy.py  test_django_middleware.py  test_fastapi_middleware.py  test_jwt.py  test_protect_flow.py
rails/: .gitignore  README.md  showad_rails.gemspec
remix/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json  tsup.config.ts
shopify/: .gitignore  README.md  package-lock.json  package.json
(+278 files in other folders)
